@@ -70,6 +70,20 @@ public:
 	 * @param msg The message to show.
 	 */
 	virtual void ShowDebugMessage(const string& msg);
+	
+	/**
+	 * \brief Shows a debug message for a Component, by printing it to
+	 * stdout.
+	 *
+	 * See UI::ShowDebugMessage(Component*,const string&,GXemul*) for
+	 * a longer comment.
+	 *
+	 * @param component A pointer to the Component.
+	 * @param msg The message to show.
+	 * @param gxemul A pointer to the GXemul instance.
+	 */
+	virtual void ShowDebugMessage(Component* component, const string& msg,
+		GXemul* gxemul);
 
 	/**
 	 * \brief Does nothing for the %ConsoleUI.
