@@ -60,6 +60,11 @@ void NullUI::ShowDebugMessage(const string& msg)
 }
 
 
+void NullUI::ShowDebugMessage(Component* component, const string& msg, GXemul* gxemul)
+{
+}
+
+
 void NullUI::ShowCommandMessage(const string& command)
 {
 }
